[package]
name = "pwd_manager"
version = "0.1.0"
authors = ["Scotchy <jules.tevissen@wanadoo.fr>"]
edition = "2018"

[dependencies]
nat_messaging = { path = "../nat_messaging" }
argonautica = { version = "0.1.5", features = ["simd"] }
hmac = "0.7.0"
sha2 = "0.8.0"
rust-crypto = "^0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand_core = "0.4.0"
rand = "0.6"
base64 = "0.10.1"
clap = {version = "~2.27.0", features = ["yaml"]}